--- a/index.htm
+++ b/index.htm
@@ -14,14 +14,14 @@
     <input type="text" name="Name" id="user-name" placeholder="Username">
 
     <label for="Number">Number</label>
-    <input type="number" name="number" id="num" placeholder="number">
+    <input type="number" name="number" id="num" placeholder="Number">
 
     <label for="Email">Email</label>
     <input type="email" name="Email" id="email" placeholder="Email">
 
     <label for="Enquiry"> Enquiry</label>
     <textarea name="Enquiry" id="enquiry" cols="30" rows="10" placeholder="Your inqury here"></textarea>
-    
+
     <input type="button" value="Submit">
   </form>
 </body>
