--- a/index.html
+++ b/index.html
@@ -5,25 +5,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles/styles.css">
   <title>Enquiries</title>
 </head>
 
 <body>
-  <form id='form-enq' action="submit">
-    <label for="Name">Name</label>
-    <input type="text" name="Name" id="user-name" placeholder="Username">
+  <div class="content">
+    <form id='form-enq' class='field'action="submit">
+      <label for="Name">Name</label>
+      <input type="text" name="Name" id="user-name" placeholder="Username"> <br>
 
-    <label for="Number">Number</label>
-    <input type="number" name="number" id="num" placeholder="Number">
+      <label for="Number">Number</label><br>
+      <input type="number" name="number" id="num" placeholder="Number"><br>
 
-    <label for="Email">Email</label>
-    <input type="email" name="Email" id="email" placeholder="Email">
+      <label for="Email">Email</label><br>
+      <input type="email" name="Email" id="email" placeholder="Email"><br>
 
-    <label for="Enquiry"> Enquiry</label>
-    <textarea name="Enquiry" id="enquiry" cols="30" rows="10" placeholder="Your inqury here"></textarea>
+      <label for="Enquiry"> Enquiry</label><br>
+      <textarea name="Enquiry" id="enquiry" cols="30" rows="10" placeholder="Your inqury here"></textarea><br>
 
-    <input type="button" value="Submit">
-  </form>
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+
 </body>
 
 </html>
