--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <div class="content">
     <form id='form-enq' class='field' onsubmit="return show_alert(this)">
+      <h3>ENQUIRY FORM</h3>
       <label for="Name">Name</label>
       <input type="text" required='required' name="Name" id="user-name" placeholder="Username"> <br>
 
@@ -23,7 +24,7 @@
       <input type="email" required='required' name="Email" id="email" placeholder="Email"><br>
 
       <label for="Enquiry"> Enquiry</label><br>
-      <textarea name="Enquiry" required='required' id="enquiry" cols="30" rows="10"
+      <textarea name="Enquiry" required='required' id="enquiry"
         placeholder="Your inqury here"></textarea><br>
 
       <button type="submit">Submit</button>
