--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
   <div class="content">
     <form id='form-enq' class='field' onsubmit="return show_alert(this)">
       <h3>ENQUIRY FORM</h3>
-      <label for="Name">Name</label>
+      <label for="Name">Name:</label>
       <input type="text" required='required' name="Name" id="user-name" placeholder="Username"> <br>
 
-      <label for="Number">Number</label><br>
+      <label for="Number">Number:</label><br>
       <input type="number" required='required' name="number" id="num" placeholder="Number"><br>
 
-      <label for="Email">Email</label><br>
+      <label for="Email">Email:</label><br>
       <input type="email" required='required' name="Email" id="email" placeholder="Email"><br>
 
-      <label for="Enquiry"> Enquiry</label><br>
+      <label for="Enquiry"> Enquiry:</label><br>
       <textarea name="Enquiry" required='required' id="enquiry"
-        placeholder="Your inqury here"></textarea><br>
+        placeholder="Type your inqury here"></textarea><br>
 
       <button type="submit">Submit</button>
     </form>
@@ -34,7 +34,7 @@
 </body>
 <script>
   function show_alert() {
-    if (!confirm("Do you want to submit form?")) {
+    if (!confirm("Are you sure your ready to submit this form?")) {
       return false;
     }
     this.form.submit();
